Update .csproj file.

--- a/Tubumu.Mediasoup.Executable.csproj
+++ b/Tubumu.Mediasoup.Executable.csproj
@@ -13,6 +13,9 @@
     <RepositoryUrl>https://github.com/albyho/Tubumu.Mediasoup.Executable</RepositoryUrl> 
     <RepositoryType>git</RepositoryType>
 
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
